--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -1,3 +1,13 @@
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -34,6 +44,7 @@ h3 {
 #treatments.show,
 #treatment.show {
     display: block;
+    padding: 2rem;
 }
 
 /* header */
@@ -54,21 +65,32 @@ footer img {
     width: 80%;
     max-width: 480px;
 }
-
+.qryCol {
+	
+	font-weight: bold;
+}
+.qryVal {
+	font-style: italic;
+	text-decoration: underline;
+}
 /* Larger than mobile (default point when grid becomes active) */
 @media (min-width: 600px) {
+    .title {
+        width: 100px;
+        padding-top: 27px;
+        margin-left: 0rem;
+    }
     header > div {
         display: flex;
         flex-direction: row;
     }
+
 }
 
 /* Larger than phablet */
 @media (min-width: 900px) {
-    .title {
-        width: 100px;
-        padding-top: 27px;
-        margin-left: 10rem;
+     .title {
+        margin-left: 0rem;
     }
     #ssForm,
     #fSearch {
