tweaked chart and header styles to make them more readbale on mobile

--- a/css/o3-article.css
+++ b/css/o3-article.css
@@ -5,7 +5,7 @@
 article {
     flex: 1 1 0%;
     padding: 1rem;
-    width: 90%;
+    width: 100%;
     max-width: 960px;
 }
 article section {
@@ -13,4 +13,8 @@ article section {
 }
 article section p {
     text-align: left;
+}
+.js-tabs {
+    width: 100%;
+    margin: 0;
 }
