--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -1,4 +1,4 @@
-/*! 2019-08-20 */
+/*! 2019-08-21 */
 /*****************************************/
 /* ocellus^3: about                      */
 /*****************************************/
@@ -46,7 +46,7 @@
 article {
     flex: 1 1 0%;
     padding: 1rem;
-    width: 90%;
+    width: 100%;
     max-width: 960px;
 }
 article section {
@@ -54,6 +54,10 @@ article section {
 }
 article section p {
     text-align: left;
+}
+.js-tabs {
+    width: 100%;
+    margin: 0;
 }
 /*****************************************/
 /* ocellus^3: base styles                */
@@ -277,7 +281,7 @@ footer img {
     grid-row-gap: 0px; 
 }
 header {
-/*     padding: 2rem 0rem 0rem 1rem; */
+    padding: 2rem 0rem 0rem 1rem;
     background-color: #f5f5f5;
     font-family: sans-serif;
     border-bottom: 1px solid silver;
@@ -560,7 +564,11 @@ a.main-title {
 }
 
 /* Larger than phablet */
-@media (min-width: 900px) {}
+@media (min-width: 900px) {
+    article {
+        width: 90%;
+    }
+}
 
 /* Larger than tablet */
 @media (min-width: 1200px) {}
