--- a/css/o3-taxon-tree.css
+++ b/css/o3-taxon-tree.css
@@ -80,4 +80,15 @@ ul.classification {
 .species > .txn {
     margin-left: 10px;
 }
+/* table.taxon-tree {
+    padding: 0;
+    margin: 0;
+} */
+table.taxon-tree td {
+    padding: 0;
+    border: none;
+}
+table.taxon-tree td.taxon-branch {
+    width: 125px;
+}
 /* end classification */
