--- a/css/o3-treatment.css
+++ b/css/o3-treatment.css
@@ -1,11 +1,20 @@
 /*****************************************/
 /* ocellus^3: treatment                  */
 /*****************************************/
-table.treatmentPIDs {
+.treatmentInfo table {
     width: 100%;
 }
-table.treatmentPIDs th {
+.treatmentInfo table th {
     text-align: right;
+    width: 20%;
+}
+.treatmentInfo table td {
+    overflow-x: auto;
+    width: 80%;
+}
+.treatmentInfo table th,
+.treatmentInfo table td {
+    font-size: 10px;
 }
 .treatment ul.citations {
     text-align: left;
@@ -31,6 +40,7 @@ table.treatmentPIDs th {
     color: white;
 }
 #map { 
+    width: 100%;
     height: 300px; 
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
