--- a/css/ocellus.css
+++ b/css/ocellus.css
@@ -1,4 +1,4 @@
-/*! 2019-08-21 */
+/*! 2019-08-22 */
 /*****************************************/
 /* ocellus^3: about                      */
 /*****************************************/
@@ -281,7 +281,7 @@ footer img {
     grid-row-gap: 0px; 
 }
 header {
-    padding: 2rem 0rem 0rem 1rem;
+    padding: 2rem 2rem 1rem 2rem;
     background-color: #f5f5f5;
     font-family: sans-serif;
     border-bottom: 1px solid silver;
@@ -561,12 +561,20 @@ a.main-title {
         font-size: 1rem;
         max-width: 960px;
     }
+    .treatmentInfo table th,
+    .treatmentInfo table td {
+        font-size: 15px;
+    }
 }
 
 /* Larger than phablet */
 @media (min-width: 900px) {
     article {
         width: 90%;
+    }
+    .treatmentInfo table th,
+    .treatmentInfo table td {
+        font-size: 20px;
     }
 }
 
@@ -801,6 +809,17 @@ ul.classification {
 .species > .txn {
     margin-left: 10px;
 }
+/* table.taxon-tree {
+    padding: 0;
+    margin: 0;
+} */
+table.taxon-tree td {
+    padding: 0;
+    border: none;
+}
+table.taxon-tree td.taxon-branch {
+    width: 125px;
+}
 /* end classification */
 /*****************************************/
 /* ocellus^3: throbber                   */
@@ -828,11 +847,20 @@ ul.classification {
 /*****************************************/
 /* ocellus^3: treatment                  */
 /*****************************************/
-table.treatmentPIDs {
+.treatmentInfo table {
     width: 100%;
 }
-table.treatmentPIDs th {
+.treatmentInfo table th {
     text-align: right;
+    width: 20%;
+}
+.treatmentInfo table td {
+    overflow-x: auto;
+    width: 80%;
+}
+.treatmentInfo table th,
+.treatmentInfo table td {
+    font-size: 10px;
 }
 .treatment ul.citations {
     text-align: left;
@@ -858,8 +886,9 @@ table.treatmentPIDs th {
     color: white;
 }
 #map { 
+    width: 100%;
     height: 300px; 
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 /*****************************************/
 /* ocellus^3: treatments                 */
