--- a/css/o3-taxon-tree.css
+++ b/css/o3-taxon-tree.css
@@ -1,5 +1,5 @@
 /*****************************************/
-/* ocellus^3: taxon tree                 */
+/* blr taxon tree                        */
 /*****************************************/
 
 ul.classification {
