--- a/css/o3-throbber.css
+++ b/css/o3-throbber.css
@@ -1,5 +1,5 @@
 /*****************************************/
-/* ocellus^3: throbber                   */
+/* blr: throbber                         */
 /*****************************************/
 
 #throbber {
