--- a/css/o3-xml.css
+++ b/css/o3-xml.css
@@ -1,5 +1,5 @@
 /*****************************************/
-/* ocellus^3: treatment xml              */
+/* blr: treatment xml                    */
 /*****************************************/
 
 p.xml {
