--- a/css/o3-base.css
+++ b/css/o3-base.css
@@ -1,11 +1,14 @@
-/*****************************************/
-/* ocellus^3: base styles                */
-/*****************************************/
-
+/* base */
 html {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+
+    --button-width: 40px;
+
+    /* tabby */
+    --border-color-tab: silver;
+    --border-color-tab-selected: #f5f5f5;
 }
 *, *:before, *:after {
     -webkit-box-sizing: inherit;
@@ -19,12 +22,20 @@ body {
     min-height: 100vh;
 }
 a {
-    color: blue;
-    cursor: pointer;
+  color: blue;
+  cursor: pointer;
 }
 .hidden {
     display: none;
 }
 .visible {
     display: block;
+}
+/* search results */
+.crit-key {
+    font-weight: bold;
+}
+.crit-val {
+    font-style: italic;
+    font-family: serif;
 }
