--- a/css/o3-footer.css
+++ b/css/o3-footer.css
@@ -1,12 +1,5 @@
-/*****************************************/
-/* ocellus^3: footer                     */
-/*****************************************/
-
-footer {
-    text-align: center;
-    padding: 0;
-}
 footer img {
-    width: 80%;
-    max-width: 480px;
+    width: 100%;
+    max-width: 280px;
+    position: absolute;
 }
