--- a/css/o3-images.css
+++ b/css/o3-images.css
@@ -1,3 +1,10 @@
+/*****************************************/
+/* blr: images                           */
+/*****************************************/
+
+#images h3.records-found {
+    font-size: 2.5rem;
+}
 .masonry {
     margin: 0;
     padding: 4rem 0;
@@ -200,13 +207,6 @@
 
 /* Larger than phablet */
 @media (min-width: 900px) {
-     .title {
-        margin-left: 0rem;
-    }
-    #ssForm,
-    #fSearch {
-        margin-right: 10rem;
-    }
     .masonry {
         -moz-column-count: 3;
         -webkit-column-count: 3;
