--- a/css/o3-pager.css
+++ b/css/o3-pager.css
@@ -1,5 +1,5 @@
 /*****************************************/
-/* ocellus^3: pager                      */
+/* blr pager                             */
 /*****************************************/
 
 #pager {
