--- a/css/o3-treatment.css
+++ b/css/o3-treatment.css
@@ -1,6 +1,7 @@
 /*****************************************/
-/* ocellus^3: treatment                  */
+/* blr: treatment                        */
 /*****************************************/
+
 .treatmentInfo table {
     width: 100%;
 }
@@ -27,6 +28,32 @@
 .treatment figcaption {
     text-align: left;
 }
+
+#treatment h3.records-found {
+    font-size: 2.5rem;
+}
+#treatment details figure, 
+#treatment details p {
+    /* font-family: serif; */
+    font-size: 2rem;
+    margin-top: 1rem;
+    padding: 1rem;
+    text-align: left;
+}
+#treatment details summary {
+    outline: 1px solid darkslateblue;
+    padding: 5px;
+    margin-bottom: 5px;
+    text-align: left;
+    background-color: lightsteelblue;
+    font-size: 2rem;
+    cursor: pointer;
+}
+#treatment details > div {
+    margin-top: -8px;
+    outline: 1px solid lightgrey;
+}
+
 .xml-marker {
     border: 1px solid grey;
     border-radius: 5px;
@@ -42,5 +69,6 @@
 #map { 
     width: 100%;
     height: 300px; 
-    /* margin-bottom: 20px; */
+    margin-top: 15px;
+    margin-bottom: 7px;
 }
