removed lazyloading and added media queries for hi res

--- a/Barebones-3.0.1/css/barebones.css
+++ b/Barebones-3.0.1/css/barebones.css
@@ -68,7 +68,8 @@ html {
 	--base-font-size: 62.5%;
 	
 	/* Grid Defaults - default to match orig skeleton settings */
-	--grid-max-width: 960px;
+  /* --grid-max-width: 960px; */
+  --grid-max-width: 100%;
 }
 
 /*  Dark Theme
