--- a/css/o3.css
+++ b/css/o3.css
@@ -380,9 +380,9 @@ header > div > div {
     width: 110px;
 }
 .titleContainer {
-    background-image: url(/img/bug.gif);
+    /* background-image: url(/img/bug.gif);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 100%; */
     display: block;
     width: 100px;
     height: 100px;
@@ -639,9 +639,25 @@ header > div > div {
 
 @media (min-width: 1920px) {
     .masonry {
-        -moz-column-count: 18;
-        -webkit-column-count: 18;
-        column-count: 18;
+        -moz-column-count: 8;
+        -webkit-column-count: 8;
+        column-count: 8;
+    }
+}
+
+@media (min-width: 2300px) {
+    .masonry {
+        -moz-column-count: 9;
+        -webkit-column-count: 9;
+        column-count: 9;
+    }
+}
+
+@media (min-width: 2500px) {
+    .masonry {
+        -moz-column-count: 10;
+        -webkit-column-count: 10;
+        column-count: 10;
     }
 }
 /*****************************************/
