--- a/css/o3.css
+++ b/css/o3.css
@@ -1,4 +1,4 @@
-/*! 2019-10-25 */
+/*! 2019-10-26 */
 /*****************************************/
 /* blr: article                          */
 /*****************************************/
@@ -483,7 +483,7 @@ header > div > div {
 /*     text-decoration-style: double; */
 }
 .masonry figcaption a.transition-050 {
-    text-decoration: none;
+    /*! text-decoration: none; */
     color: black;
 /*     font-weight: bold; */
 }
@@ -513,7 +513,40 @@ header > div > div {
     from{ bottom:-100px; opacity:0 } 
     to{ bottom:0; opacity:1 }
 }
+
+.carousel-cell {
+    border: 15px solid lightgrey;
+    position: relative;
+}
+
+.carousel-cell img {
+    border: 1px solid black;
+}
+
 .carouselOff {
+    cursor: pointer;
+}
+
+.carouselOff:hover {
+    background-color: yellow;
+}
+
+.kein-preview {
+    text-align: left;
+    padding: 10px;
+    background-color: lightgrey;
+}
+
+.kein-preview ul {
+    list-style: none;
+}
+
+.kein-preview ul li:first-child {
+    font-weight: bold;
+    font-size: large;
+}
+
+/* .carouselOff {
     position: absolute;
     left: 0;
     z-index: 100;
@@ -530,11 +563,14 @@ header > div > div {
 }
 .carouselOff:hover {
     background-color: yellow;
-}
+} */
+
 .widget {
     position: absolute;
+    right: 5px;
+    top: 5px;
     border: 0px solid red;
-    width: 100%;
+/*     width: 100%; */
     z-index: 100;
 }
 .widget form {
