new design working now. Check in before starting work on treatments and citations

--- a/dev/css/o4-treatments.css
+++ b/dev/css/o4-treatments.css
@@ -3,6 +3,8 @@
   font-size: large;
   font-family: sans-serif;
   padding: 10px;
+  background-color: lightgrey;
+  
 }
 .masonry figure div.at {
     font-style: italic;
